testsuite/tests/rename/should_compile/T14032d.hs
module T14032d where

infix 5 :*:
data a :*: b = a :*: b
