testsuite/tests/rename/should_fail/T7338a.hs
module T7338a where

a, b :: Int
a = undefined
b = undefined

c, a :: Int
c = undefined

c, d :: Int
d = undefined